Fix dmesg(8) to preserve leading whitespaces of kernel messages.

Closes PR/54729.